--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,10 @@
 __pycache__/
 resnet50_ft_weight.pkl
 data.csv
-weights/pose.pth
+../Explained_FIQA_BE/weights/pose.pth
 bestqscore.pth
 weights/backbone.pth
 new_data.csv
 best_model.pth
 magface_epoch_00025.pth
-weights/pose1.pth
+pose.pth
